# cargo-ws-inherit

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: ident_dependency.rs  item_map.rs  main.rs
tests/: mod.rs
tests/add_feature_flag/: mod.rs
tests/add_feature_flag/in/bbb/: Cargo.toml
tests/add_feature_flag/in/eee/: Cargo.toml
tests/basic/: mod.rs
tests/basic/in/: Cargo.toml
tests/basic/in/clap_complete/: Cargo.toml
tests/basic/in/clap_complete_fig/: Cargo.toml
tests/basic/in/clap_derive/: Cargo.toml
tests/basic/in/clap_lex/: Cargo.toml
tests/basic/in/clap_mangen/: Cargo.toml
tests/dep_share_own/: mod.rs
tests/dep_share_own/in/: Cargo.toml
tests/dep_virtual_ws/: mod.rs
tests/dep_virtual_ws/in/: Cargo.toml
tests/dep_virtual_ws/in/aaa/: Cargo.toml
tests/dep_virtual_ws/in/bbb/: Cargo.toml
tests/dep_virtual_ws/in/ccc/: Cargo.toml
tests/dep_virtual_ws/in/ddd/: Cargo.toml
tests/dep_virtual_ws/in/eee/: Cargo.toml
tests/full/: mod.rs
tests/full/in/clap_complete/: Cargo.toml
tests/full/in/clap_complete_fig/: Cargo.toml
tests/full/in/clap_derive/: Cargo.toml
tests/full/in/clap_mangen/: Cargo.toml
