cargo-features = ["workspace-inheritance"]

[workspace]
members = []

[package]
name = "simple"
version = "0.1.0"

[features]
default = ["cargo"]
debug = ["regex"]
cargo = ["lazy_static"]

[dependencies]
lazy_static = { version = "1", optional = true }
regex = { version = "1.0", optional = true }

[dev-dependencies]
regex = "1.0"
lazy_static = "1"