[package]
name = "clap_complete_fig"
version = "3.1.5"
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"LICENSE-*",
	"README.md"
]
description = "A generator library used with clap for Fig completion scripts"
repository = "https://github.com/clap-rs/clap/tree/master/clap_complete_fig"
documentation = "https://docs.rs/clap_complete_fig"
keywords = [
	"clap",
	"cli",
	"generate",
	"completion",
	"fig",
]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
clap = { path = "../", version = "3.1.10", default-features = false, features = ["std"] }
clap_complete = { path = "../clap_complete", version = "3.1.2" }

[dev-dependencies]
snapbox = { version = "0.2", features = ["diff"] }
