[package]
name = "clap_mangen"
version = "0.1.6"
edition = "2018"
include = [
	"src/**/*",
	"Cargo.toml",
	"LICENSE-*",
	"README.md"
]
description = "A manpage generator for clap"
repository = "https://github.com/clap-rs/clap/tree/master/clap_mangen"
documentation = "https://docs.rs/clap_mangen"
keywords = [
	"clap",
	"cli",
	"generate",
	"manpage",
]
categories = ["command-line-interface"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
roff = "0.2.1"
clap = { path = "../", version = "3.1.10", default-features = false, features = ["std", "env"] }

[dev-dependencies]
snapbox = { version = "0.2", features = ["diff"] }
clap = { path = "../", version = "3.1.10", default-features = false, features = ["std"] }

[features]
default = []
debug = ["clap/debug"]
