[package]
name = "aaa"
version = "0.1.0"

[dependencies]
bbb = { version = "0.2.0", path = "../bbb", optional = true }
is_executable = { version = "1.0.1", optional = true }
os_str_bytes = { version = "6.0", default-features = false, features = ["raw_os_str"], optional = true }
pathdiff = { version = "0.2.1", optional = true }
shlex = { version = "1.1.0", optional = true }
unicode-xid = { version = "0.2.2", optional = true }

[dev-dependencies]
pretty_assertions = "1.0"
snapbox = { version = "0.2", features = ["diff"] }
# Cutting out `filesystem` feature
trycmd = { version = "0.13", default-features = false, features = ["color-auto", "diff", "examples"] }

[features]
default = []
unstable-dynamic = ["bbb", "shlex", "unicode-xid", "os_str_bytes", "is_executable", "pathdiff"]
